--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: true
         # 构建镜像，指定镜像名
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
